# solvespace

./: db.sqlite3  pyproject.toml  requirements.txt
core/: .gitignore  settings.py  urls.py
questions/: admin.py  forms.py  models.py  urls.py  views.py
questions/migrations/: 0001_initial.py  0002_alter_question_image.py
templates/: base.html  dashboard.html  delete_question.html  delete_user.html  home.html  login.html  post_answer.html  post_question.html  question_details.html  sign_up.html  update_question.html  update_user_details.html  user_details.html  vercel.json
users/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_profile_pic.py
