[project]
name = "solvespace"
version = "0.1.0"
description = ""
authors = [
    {name = "Joshimani",email = "caraiglex@gmail.com"}
]
requires-python = ">=3.12,<=4.0"
dependencies = [
    "pillow (>=12.2.0,<13.0.0)",
    "django (>=6.0.6,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
